Fix newest niches bug + fix bug making containers too small

--- a/src/assets/styles/niched-styles.css
+++ b/src/assets/styles/niched-styles.css
@@ -8,8 +8,13 @@ body {
 }
 
 .homepage-container {
-  max-width: 1600px;
+  max-width: 1100px;
   width: 100%;
+}
+
+.card-page-container {
+  max-width: 1100px;
+  width: auto;
 }
 
 .home-card-bg {
